--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,11 @@
       <id>spigot-repo</id>
       <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
     </repository>
+    <!-- for Vault -->
+    <repository>
+      <id>vault-repo</id>
+      <url>http://nexus.hc.to/content/repositories/pub_releases</url>
+    </repository>
   </repositories>
   <dependencies>
     <dependency>
@@ -30,6 +35,12 @@
       <artifactId>bukkit</artifactId>
       <version>1.9-R0.1-SNAPSHOT</version>
       <classifier>shaded</classifier>
+    </dependency>
+    <dependency>
+      <groupId>net.milkbowl.vault</groupId>
+      <artifactId>VaultAPI</artifactId>
+      <version>1.6</version>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 </project>
